# yats

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: CompileOptions.cmake  Cppcheck.cmake  HealthCheck.cmake
deploy/yats-1.0/debian/: changelog  control  copyright  install
docs/: CMakeLists.txt
source/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/examples/citric_acid_cycle/: CMakeLists.txt  compounds.h  enzymes.h  main.cpp
source/examples/compilation/: CMakeLists.txt  main.cpp
source/examples/glraw/: CMakeLists.txt
source/examples/glraw/glraw/: CMakeLists.txt  Canvas.cpp  Canvas.h  ConvertManager.cpp  ConvertManager.h  MemoryProcessor.cpp  MemoryProcessor.h  RawFile.cpp  RawFile.h  glraw_api.h
source/examples/glraw/glraw-cmd/: CMakeLists.txt
source/examples/glraw/glraw/filter/: AbstractFilter.cpp  BlockBlur.h  Filter.cpp  Filter.h  Filter.hpp
source/examples/parallel_sort/: CMakeLists.txt  main.cpp  parallel_sort.h
source/examples/pipeline/: CMakeLists.txt  a.txt  gl.cpp  main.cpp  window.cpp  window.h
source/tests/: CMakeLists.txt
source/tests/compilation/: CMakeLists.txt  demo.cpp  has_options.cpp  has_thread_constraints.cpp  incompilable.cpp  incompilable_connections.cpp  run.cmake  slot_move_constructible.cpp  type_safe_connection.cpp
source/tests/yats-test/: CMakeLists.txt  class_name_test.cpp  connection_test.cpp  constraints_test.cpp  custom_constructor_test.cpp  identifier_test.cpp  main.cpp  options_test.cpp  parallel_sort.h  pipeline_test.cpp  queue_test.cpp  scheduler_adv_test.cpp  scheduler_test.cpp  slot_test.cpp  task_configurator_test.cpp  task_container_test.cpp  taskconfigurator_test.cpp  taskcontainer_test.cpp  test_util.h  util_test.cpp  yats_test.cpp
source/tests/yatslib-test/: CMakeLists.txt  fibonacci_test.cpp  util_test.cpp  yats_test.cpp
source/yats/: CMakeLists.txt
source/yats/include/yats/: AbstractConnector.h  ConnectionHelper.h  Functional.h  Identifier.h  Input.h  InputConnector.h  InputProxy.h  Nodeconfigurator.h  Nodecontainer.h  Output.h  OutputConnector.h  OutputProxy.h  Pipeline.h  Scheduler.h  TaskConfigurator.h  TaskContainer.h  Util.h  class_name.h  condition.h  connection_helper.h  constraint.h  constraint_helper.h  identifier.h  input.h  input_connector.h  lambda_task.h  options.h  output.h  output_connector.h  pipeline.h  queue.h  scheduler.h  scheduler_adv.h  slot.h  task_configurator.h  task_container.h  task_helper.h  thread_pool.h  thread_safe_queue.h  threadpool.h  (+1 more)
source/yatslib/: CMakeLists.txt
source/yatslib/include/yatslib/: Input.h  Nodeconfigurator.h  Nodecontainer.h  Output.h  Pipeline.h  Util.h
source/yatslib/source/: main.cpp
